Select Linked works incorrectly #75128

Closed
opened 2020-03-27 12:21:01 +01:00 by Ivan Perevala · 15 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce GTX 1050 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 445.75

Blender Version
Broken: version: 2.82 (sub 7), branch: master, commit date: 2020-02-12 16:20, hash: 77d23b0bd7
Worked: (optional)

Short description of error
https://youtu.be/ptnwfjPIuP0
The operator "Select Linked" does not select anything if one vertex is initially selected on the edge of a non-manifold object

Exact steps for others to reproduce the error

  • Open attached file
  • Select a border vertex.
  • Press Ctrl+L

test_select_linked.blend

**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce GTX 1050 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 445.75 **Blender Version** Broken: version: 2.82 (sub 7), branch: master, commit date: 2020-02-12 16:20, hash: `77d23b0bd7` Worked: (optional) **Short description of error** https://youtu.be/ptnwfjPIuP0 The operator "Select Linked" does not select anything if one vertex is initially selected on the edge of a non-manifold object **Exact steps for others to reproduce the error** - Open attached file - Select a border vertex. - Press Ctrl+L [test_select_linked.blend](https://archive.blender.org/developer/F8431971/test_select_linked.blend)
Author

Added subscriber: @ivpe

Added subscriber: @ivpe

Added subscriber: @mano-wii

Added subscriber: @mano-wii

Can you provide a simple blend file showing the problem?

Can you provide a simple blend file showing the problem?
Author

Strange, but I found out that the problem is related to the addon that I wrote. I’m trying to recreate the conditions that cause this behavior of standard tools, but I’m sure that the selection state does not contradict this
requirements. In the near future I hope to find the reason, I’ll ask you not to close the task yet.

Strange, but I found out that the problem is related to the addon that I wrote. I’m trying to recreate the conditions that cause this behavior of standard tools, but I’m sure that the selection state does not contradict [this](https://docs.blender.org/api/current/bmesh.html#keeping-a-correct-state) requirements. In the near future I hope to find the reason, I’ll ask you not to close the task yet.

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'
Author

I rewrote the part of the addon which causes further problems.
To recreate a problem you need to:

  • There is a script in the attached file, run it
  • Run the operator in the viewport (F3> Test Operator)
  • Click several times on the mesh and press enter
  • Select the vertex that is on the edge of the mesh and press Ctrl + L

As you can see, problems arise only for the vertices located on the edge of the mesh, for the rest everything works fine

https://youtu.be/D1gunINN9PE
test_select_linked.blend

I rewrote the part of the addon which causes further problems. To recreate a problem you need to: - There is a script in the attached file, run it - Run the operator in the viewport (F3> Test Operator) - Click several times on the mesh and press enter - Select the vertex that is on the edge of the mesh and press Ctrl + L As you can see, problems arise only for the vertices located on the edge of the mesh, for the rest everything works fine https://youtu.be/D1gunINN9PE [test_select_linked.blend](https://archive.blender.org/developer/F8430923/test_select_linked.blend)

As much as I click on the mesh with the operator running, I can't reproduce the problem.

Please try the latest daily build: https://builder.blender.org/download/

Go to File → Defaults → Load Factory Settings and then load your file to see if you still can reproduce this issue.

As much as I click on the mesh with the operator running, I can't reproduce the problem. Please try the latest daily build: https://builder.blender.org/download/ Go to File → Defaults → Load Factory Settings and then load your file to see if you still can reproduce this issue.
Author

I've already tried to install 2.82a and to use daily build and I have the same issue. I made simplified as much as possible script. Please try to follow these steps:

  • Open attached file and run script
  • In the console should be next lines:
Initially selected BMVert [10]
"bpy.ops.mesh.select_linked_pick" select [24] verts
  • Select same vert in the viewport (just to make it active)
  • Press Ctrl+L

test_select_linked.blend

I've already tried to install 2.82a and to use daily build and I have the same issue. I made simplified as much as possible script. Please try to follow these steps: - Open attached file and run script - In the console should be next lines: ``` Initially selected BMVert [10] "bpy.ops.mesh.select_linked_pick" select [24] verts ``` - Select same vert in the viewport (just to make it active) - Press Ctrl+L [test_select_linked.blend](https://archive.blender.org/developer/F8431971/test_select_linked.blend)

Changed status from 'Needs User Info' to: 'Needs Triage'

Changed status from 'Needs User Info' to: 'Needs Triage'

Added subscriber: @ideasman42

Added subscriber: @ideasman42

At first I thought you were referring to the select_linked_pick operator (shortcut L).
The select_linked operator (Ctrl L) actually ignores border elements if the delimitation is of the NORMAL type.
This seems to be buggy from the user's perspective.
I have not found documentation explaining this behavior. @ideasman42, does it work as intended?

At first I thought you were referring to the `select_linked_pick` operator (shortcut L). The `select_linked` operator (Ctrl L) actually ignores border elements if the delimitation is of the `NORMAL` type. This seems to be buggy from the user's perspective. I have not found documentation explaining this behavior. @ideasman42, does it work as intended?

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

I will consider this a bug for now.

I will consider this a bug for now.

This issue was referenced by cdbb61704d

This issue was referenced by cdbb61704d7edb9e67452b848b1eebcb3f4b0ae7

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Campbell Barton self-assigned this 2020-04-07 09:46:42 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#75128
No description provided.