Fix T75128: Select Linked fails when the selection is a delimiter

Starting select linked failed when the selected vertex or edge
was it's self delimiting.

Support using these elements for linked select
as long as they're part of an isolated selection.